{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 386,
  "lineage": "6cfd94cb-ae82-f372-3062-d8aa1a0f821f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587120115963:loadbalancer/app/my-alb/364a1129a26ac76c",
            "arn_suffix": "app/my-alb/364a1129a26ac76c",
            "dns_name": "my-alb-706728546.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:587120115963:loadbalancer/app/my-alb/364a1129a26ac76c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-0d13a88f40c263c48"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a2a11f62aae0993"
              },
              {
                "subnet_id": "subnet-080204f95c6bb5e58"
              }
            ],
            "subnets": [
              "subnet-04a2a11f62aae0993",
              "subnet-080204f95c6bb5e58"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0654a666109f1322b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587120115963:listener/app/my-alb/364a1129a26ac76c/bc623b79daa34c41",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/jenkins-tg/7cddfa5cf633594f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587120115963:listener/app/my-alb/364a1129a26ac76c/bc623b79daa34c41",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:587120115963:loadbalancer/app/my-alb/364a1129a26ac76c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.ec2_app.aws_instance.this",
            "module.ec2_app.aws_spot_instance_request.this",
            "module.ec2_jenkins.aws_instance.this",
            "module.ec2_jenkins.aws_spot_instance_request.this",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/jenkins-tg/7cddfa5cf633594f",
            "arn_suffix": "targetgroup/jenkins-tg/7cddfa5cf633594f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/jenkins-tg/7cddfa5cf633594f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jenkins-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.ec2_app.aws_instance.this",
            "module.ec2_app.aws_spot_instance_request.this",
            "module.ec2_jenkins.aws_instance.this",
            "module.ec2_jenkins.aws_spot_instance_request.this",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/app-tg/e681320f2fef4b8d",
            "arn_suffix": "targetgroup/app-tg/e681320f2fef4b8d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/app-tg/e681320f2fef4b8d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "app-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.ec2_app.aws_instance.this",
            "module.ec2_app.aws_spot_instance_request.this",
            "module.ec2_jenkins.aws_instance.this",
            "module.ec2_jenkins.aws_spot_instance_request.this",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/jenkins-tg/7cddfa5cf633594f-20211120163320331000000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/jenkins-tg/7cddfa5cf633594f",
            "target_id": "i-0e060a2fe7bacda85"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.ec2_app.aws_instance.this",
            "module.ec2_app.aws_spot_instance_request.this",
            "module.ec2_jenkins.aws_instance.this",
            "module.ec2_jenkins.aws_spot_instance_request.this",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "1.0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/app-tg/e681320f2fef4b8d-20211120163320367000000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:587120115963:targetgroup/app-tg/e681320f2fef4b8d",
            "target_id": "i-0512f61a0ab32b54e"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.ec2_app.aws_instance.this",
            "module.ec2_app.aws_spot_instance_request.this",
            "module.ec2_jenkins.aws_instance.this",
            "module.ec2_jenkins.aws_spot_instance_request.this",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:security-group/sg-0d13a88f40c263c48",
            "description": "Security group for alb",
            "egress": [],
            "id": "sg-0d13a88f40c263c48",
            "ingress": [],
            "name": "albsg-20211120163234738400000002",
            "name_prefix": "albsg-",
            "owner_id": "587120115963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "albsg",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "albsg",
              "Owner": "rohit",
              "projectid": "118"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-142312180",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d13a88f40c263c48",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-9569814",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d13a88f40c263c48",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:security-group/sg-062ef34cd97495e5b",
            "description": "Security group for app instance",
            "egress": [],
            "id": "sg-062ef34cd97495e5b",
            "ingress": [],
            "name": "appsg-20211120163234738900000003",
            "name_prefix": "appsg-",
            "owner_id": "587120115963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "appsg",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "appsg",
              "Owner": "rohit",
              "projectid": "118"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 8080,
            "id": "sgrule-3310334206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-062ef34cd97495e5b",
            "self": false,
            "source_security_group_id": "sg-0d13a88f40c263c48",
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-4138577523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-062ef34cd97495e5b",
            "self": false,
            "source_security_group_id": "sg-00a6dc0a7c492fae3",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1912450316",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-062ef34cd97495e5b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "20.10.0.0/16"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-60159016",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-062ef34cd97495e5b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:security-group/sg-00a6dc0a7c492fae3",
            "description": "Security group for bastion instance",
            "egress": [],
            "id": "sg-00a6dc0a7c492fae3",
            "ingress": [],
            "name": "bastsg-20211120163238280400000004",
            "name_prefix": "bastsg-",
            "owner_id": "587120115963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bastsg",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastsg",
              "Owner": "rohit",
              "projectid": "118"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1509712453",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00a6dc0a7c492fae3",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1596336826",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a6dc0a7c492fae3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-2014641727",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-00a6dc0a7c492fae3",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:587120115963:instance/i-0512f61a0ab32b54e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0512f61a0ab32b54e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab5da5902f157d09",
            "private_dns": "ip-20-10-1-66.ec2.internal",
            "private_ip": "20.10.1.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:587120115963:key/4693d669-9265-4d1a-8b13-ff8201214ff4",
                "tags": {
                  "Name": "my-root-block"
                },
                "throughput": 200,
                "volume_id": "vol-03bbf34ebd7168a2b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06aeec524ffed16d0",
            "tags": {
              "Environment": "dev",
              "Name": "app",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-062ef34cd97495e5b"
            ]
          },
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:587120115963:instance/i-032fcfac4f120de7d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032fcfac4f120de7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e650c44c7a5e218",
            "private_dns": "ip-20-10-11-25.ec2.internal",
            "private_ip": "20.10.11.25",
            "public_ip": "44.197.187.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:587120115963:key/4693d669-9265-4d1a-8b13-ff8201214ff4",
                "tags": {
                  "Name": "my-root-block"
                },
                "throughput": 200,
                "volume_id": "vol-07c9f08a6e5c03edf",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080204f95c6bb5e58",
            "tags": {
              "Environment": "dev",
              "Name": "bastion",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-00a6dc0a7c492fae3"
            ]
          },
          "dependencies": [
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:587120115963:instance/i-0e060a2fe7bacda85",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e060a2fe7bacda85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-042311d18e5966cc3",
            "private_dns": "ip-20-10-1-166.ec2.internal",
            "private_ip": "20.10.1.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:587120115963:key/4693d669-9265-4d1a-8b13-ff8201214ff4",
                "tags": {
                  "Name": "my-root-block"
                },
                "throughput": 200,
                "volume_id": "vol-0c9c74ce719192422",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06aeec524ffed16d0",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0c50d80533ecf7dff"
            ]
          },
          "dependencies": [
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:security-group/sg-0c50d80533ecf7dff",
            "description": "Security group for jenkins instance",
            "egress": [],
            "id": "sg-0c50d80533ecf7dff",
            "ingress": [],
            "name": "jenkins_sg-20211120163234735400000001",
            "name_prefix": "jenkins_sg-",
            "owner_id": "587120115963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jenkins_sg",
              "Owner": "rohit",
              "projectid": "118"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins_sg",
              "Owner": "rohit",
              "projectid": "118"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 8080,
            "id": "sgrule-226687150",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c50d80533ecf7dff",
            "self": false,
            "source_security_group_id": "sg-0d13a88f40c263c48",
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-1512406590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c50d80533ecf7dff",
            "self": false,
            "source_security_group_id": "sg-00a6dc0a7c492fae3",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1959462868",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c50d80533ecf7dff",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "20.10.0.0/16"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-896024559",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c50d80533ecf7dff",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e47c65ed1e12ac0",
            "domain": "vpc",
            "id": "eipalloc-00e47c65ed1e12ac0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-92-100-231.compute-1.amazonaws.com",
            "public_ip": "3.92.100.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ug-dev-118-us-east-1a"
            },
            "tags_all": {
              "Name": "ug-dev-118-us-east-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:internet-gateway/igw-0c6a3e8d639a75e7a",
            "id": "igw-0c6a3e8d639a75e7a",
            "owner_id": "587120115963",
            "tags": {
              "Name": "ug-dev-118"
            },
            "tags_all": {
              "Name": "ug-dev-118"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e47c65ed1e12ac0",
            "connectivity_type": "public",
            "id": "nat-0785201fe4a408c5f",
            "network_interface_id": "eni-0330ae964ffa1cfbe",
            "private_ip": "20.10.11.120",
            "public_ip": "3.92.100.231",
            "subnet_id": "subnet-080204f95c6bb5e58",
            "tags": {
              "Name": "ug-dev-118-us-east-1a"
            },
            "tags_all": {
              "Name": "ug-dev-118-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e147129dcc65ead31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0785201fe4a408c5f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e147129dcc65ead3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c6a3e8d639a75e7a",
            "id": "r-rtb-0f8fb91e00ab345a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8fb91e00ab345a2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:route-table/rtb-0e147129dcc65ead3",
            "id": "rtb-0e147129dcc65ead3",
            "owner_id": "587120115963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ug-dev-118-private"
            },
            "tags_all": {
              "Name": "ug-dev-118-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:route-table/rtb-0f8fb91e00ab345a2",
            "id": "rtb-0f8fb91e00ab345a2",
            "owner_id": "587120115963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ug-dev-118-public"
            },
            "tags_all": {
              "Name": "ug-dev-118-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ba08e7aee8781a5",
            "route_table_id": "rtb-0e147129dcc65ead3",
            "subnet_id": "subnet-06aeec524ffed16d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044afbb080dbc9ef7",
            "route_table_id": "rtb-0e147129dcc65ead3",
            "subnet_id": "subnet-0a8f44ed951c71865"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c89cc93f71393330",
            "route_table_id": "rtb-0f8fb91e00ab345a2",
            "subnet_id": "subnet-080204f95c6bb5e58"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9fd50accb0dcee3",
            "route_table_id": "rtb-0f8fb91e00ab345a2",
            "subnet_id": "subnet-04a2a11f62aae0993"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:subnet/subnet-06aeec524ffed16d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.10.1.0/24",
            "id": "subnet-06aeec524ffed16d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "587120115963",
            "tags": {
              "Name": "ug-dev-118-private-us-east-1a"
            },
            "tags_all": {
              "Name": "ug-dev-118-private-us-east-1a"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:subnet/subnet-0a8f44ed951c71865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.10.2.0/24",
            "id": "subnet-0a8f44ed951c71865",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "587120115963",
            "tags": {
              "Name": "ug-dev-118-private-us-east-1b"
            },
            "tags_all": {
              "Name": "ug-dev-118-private-us-east-1b"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:subnet/subnet-080204f95c6bb5e58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.10.11.0/24",
            "id": "subnet-080204f95c6bb5e58",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587120115963",
            "tags": {
              "Name": "ug-dev-118-public-us-east-1a"
            },
            "tags_all": {
              "Name": "ug-dev-118-public-us-east-1a"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:subnet/subnet-04a2a11f62aae0993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.10.12.0/24",
            "id": "subnet-04a2a11f62aae0993",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587120115963",
            "tags": {
              "Name": "ug-dev-118-public-us-east-1b"
            },
            "tags_all": {
              "Name": "ug-dev-118-public-us-east-1b"
            },
            "vpc_id": "vpc-0654a666109f1322b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587120115963:vpc/vpc-0654a666109f1322b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.10.0.0/16",
            "default_network_acl_id": "acl-0ef40872ba2dc0210",
            "default_route_table_id": "rtb-04776d3498eb844bc",
            "default_security_group_id": "sg-06b7a6449583e6e9a",
            "dhcp_options_id": "dopt-71c7c60b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0654a666109f1322b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04776d3498eb844bc",
            "owner_id": "587120115963",
            "tags": {
              "Name": "ug-dev-118"
            },
            "tags_all": {
              "Name": "ug-dev-118"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}